<resources>
    <string name="app_name">TravelConsuption</string>
    <string name="text_Header">Aplicativo para calcular o consumo de viagens</string>
    <string name="edit_Distance">Distância</string>
    <string name="text_total_Km">Total em quilômetros</string>
    <string name="edit_Price">Preço</string>
    <string name="text_Price_per_Liter">Preço por litro</string>
    <string name="edit_Autonomy">Autonomia</string>
    <string name="text_Autonomy">Quilômetros por litro</string>
    <string name="text_Ans">Seu gasto total será de:</string>
    <string name="text_label_resul">R$ 0</string>
    <string name="botton_Calculate">Calcular</string>
    <string name="Validation_fill_all_fields">Preencha todos os campus</string>
    <string name="no_div_zero">Não existe divisão por zero</string>
</resources>