<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/text_Header"
        android:textColor="@color/Red"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/edit_Distance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_Distance"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_total_Km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_total_Km"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edit_Price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:hint="@string/edit_Price"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_Price_per_Liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_Price_per_Liter"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/edit_Autonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:hint="@string/edit_Autonomy"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_Autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_Autonomy"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/text_Ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:text="@string/text_Ans"
        android:textAllCaps="true"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/text_label_resul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_label_resul"
        android:textColor="@color/Blue"
        android:textSize="35dp" />

    <Button
        android:id="@+id/botton_Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:backgroundTint="@color/LightGreer"
        android:padding="16dp"
        android:text="@string/botton_Calculate"
        android:textAllCaps="true"
        android:textSize="20sp"

        />

</LinearLayout>